<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/miLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgFibonacci"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/fibonacci"
        android:clickable="true"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTxtNSolicitado"/>

    <EditText
        android:id="@+id/editTxtNSolicitado"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hintBtnCalcular"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFibonacci"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/btnCalcularFibonacci"
        android:textSize="12sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/spinnerFactorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNSolicitado" />

    <Spinner
        android:id="@+id/spinnerFactorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:entries="@array/numerosFactorial"
        app:layout_constraintBottom_toTopOf="@+id/btnFactorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnFactorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/btnFactorial"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPaises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFactorial" />

    <Button
        android:id="@+id/btnPaises"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/btnPaises"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFactorial"
        app:layout_constraintBottom_toTopOf="@id/textViewContador"/>

    <TextView
        android:id="@+id/textViewContador"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/Veces_al_inicio"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPaises" />

</androidx.constraintlayout.widget.ConstraintLayout>